--- a/pokemon_api/.eslintrc
+++ b/pokemon_api/.eslintrc
@@ -9,18 +9,18 @@
     "airbnb-base",
     "react-app",
     "plugin:jsx-a11y/recommended"
-  ],
-  "rules": {
-    "linebreak-style": 0,
-    "react/jsx-curly-brace-presence": "off",
-    "react/jsx-wrap-multilines": "off",
-    "operator-linebreak": [
-      "error",
-      "after",
-      { "overrides": { "?": "before", ":": "before", "&&": "before" } }
-    ],
-    "react/jsx-props-no-spreading": "off",
-    "react/react-in-jsx-scope": "off",
-    "react/require-default-props": "off"
-  }
+  ]
+//   "rules": {
+//     "linebreak-style": 0,
+//     "react/jsx-curly-brace-presence": "off",
+//     "react/jsx-wrap-multilines": "off",
+//     "operator-linebreak": [
+//       "error",
+//       "after",
+//       { "overrides": { "?": "before", ":": "before", "&&": "before" } }
+//     ],
+//     "react/jsx-props-no-spreading": "off",
+//     "react/react-in-jsx-scope": "off",
+//     "react/require-default-props": "off"
+//   }
 }
